[gd_scene load_steps=28 format=2]

[ext_resource path="res://Carros/car_01_01.png" type="Texture" id=1]
[ext_resource path="res://script_carro.gd" type="Script" id=2]
[ext_resource path="res://Carros/car_01_02.png" type="Texture" id=3]
[ext_resource path="res://Carros/car_01_04.png" type="Texture" id=4]
[ext_resource path="res://Carros/car_01_06.png" type="Texture" id=5]
[ext_resource path="res://Carros/car_01_05.png" type="Texture" id=6]
[ext_resource path="res://Carros/car_01_03.png" type="Texture" id=7]
[ext_resource path="res://Carros/car_02_04.png" type="Texture" id=8]
[ext_resource path="res://Carros/car_03_01.png" type="Texture" id=9]
[ext_resource path="res://Carros/car_03_03.png" type="Texture" id=10]
[ext_resource path="res://Carros/car_03_04.png" type="Texture" id=11]
[ext_resource path="res://Carros/car_03_02.png" type="Texture" id=12]
[ext_resource path="res://Carros/car_02_06.png" type="Texture" id=13]
[ext_resource path="res://Carros/car_02_02.png" type="Texture" id=14]
[ext_resource path="res://Carros/car_02_05.png" type="Texture" id=15]
[ext_resource path="res://Carros/car_03_06.png" type="Texture" id=16]
[ext_resource path="res://Carros/car_03_05.png" type="Texture" id=17]
[ext_resource path="res://Carros/car_02_01.png" type="Texture" id=18]
[ext_resource path="res://Carros/car_02_03.png" type="Texture" id=19]
[ext_resource path="res://Sons/CarroPartida.wav" type="AudioStream" id=20]
[ext_resource path="res://Sons/Velocidade0a250.wav" type="AudioStream" id=21]
[ext_resource path="res://Imagens/ScreenHunter 668.png" type="Texture" id=22]
[ext_resource path="res://Sons/Velocidade250a500.wav" type="AudioStream" id=23]
[ext_resource path="res://Sons/Velocidade500ouSuperior.wav" type="AudioStream" id=24]
[ext_resource path="res://Sons/sem-acelerar.wav" type="AudioStream" id=25]
[ext_resource path="res://Sons/freio.wav" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.9307, 9.49272 )

[node name="Node2D" type="Node2D"]
position = Vector2( -0.151212, -0.276403 )
rotation = -1.5708
scale = Vector2( 0.983918, 1.10329 )
__meta__ = {
"_edit_group_": true
}

[node name="Carro" type="KinematicBody2D" parent="."]
position = Vector2( 0.794606, -1.05947 )
rotation = -3.14159
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Carro1" type="Sprite" parent="Carro"]
position = Vector2( -0.562329, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.413925, 0.35493 )
texture = ExtResource( 1 )

[node name="Carro2" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 3 )

[node name="Carro3" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 7 )

[node name="Carro4" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 4 )

[node name="Carro5" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 6 )

[node name="Carro6" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 5 )

[node name="Carro7" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 18 )

[node name="Carro8" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 14 )

[node name="Carro9" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 19 )

[node name="Carro10" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 8 )

[node name="Carro11" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 15 )

[node name="Carro12" type="Sprite" parent="Carro"]
position = Vector2( 0.0234114, -1.70453 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.346768 )
texture = ExtResource( 13 )

[node name="Carro13" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 9 )

[node name="Carro14" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 12 )

[node name="Carro15" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 10 )

[node name="Carro16" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 11 )

[node name="Carro17" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 17 )

[node name="Carro18" type="Sprite" parent="Carro"]
position = Vector2( 0.0234124, -2.10213 )
rotation = -3.14159
scale = Vector2( 0.390495, 0.35493 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Carro"]
position = Vector2( -0.386224, -2.00607 )
rotation = -1.549
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Carro"]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -438.622, -159.123 )
rotation = -1.5708
scale = Vector2( 0.169059, 0.145206 )
texture = ExtResource( 22 )
region_rect = Rect2( 86, 44, 280, 928 )

[node name="Partida" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 20 )
volume_db = -10.0
autoplay = true
attenuation = 0.757858

[node name="Velocidade0a250" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 21 )
volume_db = -10.0

[node name="Velocidade250a500" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 23 )
volume_db = -10.0

[node name="velocidade500" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 24 )
volume_db = -10.0

[node name="Semacelerar" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 25 )
volume_db = -10.0

[node name="Freio" type="AudioStreamPlayer2D" parent="Carro"]
stream = ExtResource( 26 )
volume_db = -10.0
